# Qorba

./: .env.example  .gitignore  Fund Return Analyzer  README.md  app.py  docker-compose.yml  package.json  pnpm-lock.yaml  requirements.txt
analytics/: absolute_return.py  absolute_risk.py  peer_group.py  performance_tables.py  regression.py  rolling.py
apps/api/: alembic.ini  pyproject.toml
apps/api/qorba_api/: auth.py  main.py  settings.py
apps/api/qorba_api/core/analytics/: __init__.py  absolute_return.py  absolute_risk.py  constants.py  peer_group.py  performance_tables.py  regression.py  rolling.py
apps/api/qorba_api/core/benchmarks/: __init__.py  caissa.py  provider.py  static.py
apps/api/qorba_api/core/ingestion/: __init__.py  cascade.py  loader.py  pdf_tier1.py  pdf_tier2.py  scoring.py
apps/api/qorba_api/db/: models.py  session.py
apps/api/qorba_api/db/migrations/: env.py
apps/api/qorba_api/db/migrations/versions/: 0001_initial.py
apps/api/qorba_api/routers/: analyses.py  auth.py  benchmarks.py  caissa.py  funds.py  health.py  ingest.py  metrics.py
apps/api/qorba_api/schemas/: analyses.py  auth.py  benchmarks.py  ingest.py  returns.py
apps/api/qorba_api/services/: benchmark_provider.py  compute.py  series.py
apps/api/tests/: conftest.py
apps/api/tests/analytics/: test_cascade_scoring.py  test_signatures_unchanged.py
apps/api/tests/api/: test_caissa_proxy.py  test_health.py  test_pdf_ingest.py  test_round_trip.py  test_sprint3.py
apps/api/tests/fixtures/: build_pdf.py
charts/: __init__.py  bar_charts.py  capture_chart.py  histogram.py  (+8 more)
(+64 files in other folders)
