[project]
name = "qorba-api"
version = "0.1.0"
description = "Qorba analytics API"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
  "email-validator>=2.2",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "alembic>=1.13",
  "argon2-cffi>=23.1",
  "python-multipart>=0.0.12",
  "pandas>=2.2",
  "numpy>=2.0",
  "scipy>=1.14",
  "statsmodels>=0.14",
  "openpyxl>=3.1",
  "xlrd>=2.0",
  "pymupdf>=1.24",
  "pdfplumber>=0.11",
  "httpx>=0.27",
  "authlib>=1.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "httpx>=0.27",
  "ruff>=0.7",
  "mypy>=1.13",
  "types-python-dateutil",
  "pandas-stubs",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["qorba_api"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
# B008: FastAPI uses Depends()/File()/Body() in argument defaults by design.
# RUF002: math glyphs (×, ², √) are intentional in Travers analytics docstrings.
ignore = ["E501", "B008", "RUF002"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
